<?xml version="1.0"?>
<package format="2">
  <name>multi_mbes_sim</name>
  <version>0.0.0</version>
  <description>The multi_mbes_sim package</description>

  <maintainer email="roland@ccom.unh.edu">roland</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
